syntax = "proto3";
package vention.app.v1;

import "google/protobuf/empty.proto";


message PingRequest {
  string message = 1;
}

message PingResponse {
  string message = 1;
}

message HeartbeatMessage {
  string value = 1;
  int64 timestamp = 2;
}

service VentionAppService {
  rpc ping (PingRequest) returns (PingResponse);
  rpc heartbeat (google.protobuf.Empty) returns (stream HeartbeatMessage);
}
